[tool.poetry]
name = "pymeowlib"
version = "0.1.0"
description = ""
authors = ["MarcellPerger <marcell.perger@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8.0,<3.11"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
